--- a/AndroidOnTheWay/AndroidManifest.xml
+++ b/AndroidOnTheWay/AndroidManifest.xml
@@ -65,6 +65,11 @@
             android:label="@string/app_name" 
             android:theme="@android:style/Theme.Light.NoTitleBar">
         </activity>
+        <activity
+            android:name="com.demo.androidontheway.camera.CameraCapture"
+            android:label="@string/app_name" 
+            android:theme="@android:style/Theme.Light.NoTitleBar">
+        </activity>
     </application>
 
 </manifest>
