--- a/AndroidOnTheWay/AndroidManifest.xml
+++ b/AndroidOnTheWay/AndroidManifest.xml
@@ -8,6 +8,12 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="19" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    
+    <!-- bluetooth -->
+         <uses-permission android:name="android.permission.BLUETOOTH"/>  
+        <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />  
+        <uses-permission android:name="android.permission.READ_CONTACTS"/>  
+        <uses-permission android:name="android.permission.CAMERA"/>  
 
     <application
         android:allowBackup="true"
@@ -68,6 +74,21 @@
         <activity
             android:name="com.demo.androidontheway.camera.CameraCapture"
             android:label="@string/app_name" 
+            android:theme="@android:style/Theme.Light.NoTitleBar">
+        </activity>
+        <activity
+            android:name="com.demo.androidontheway.bt.BTOpenCameraActivity"
+            android:label="@string/app_name" 
+            android:theme="@android:style/Theme.Light.NoTitleBar">
+        </activity> 
+        <activity
+            android:name="com.mibound.bluetoothtest.BTChatActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity 
+            android:name="com.mibound.bluetoothtest.BTDeviceActivity"
+            android:label="@string/app_name"
             android:theme="@android:style/Theme.Light.NoTitleBar">
         </activity>
     </application>
