--- a/AndroidOnTheWay/AndroidManifest.xml
+++ b/AndroidOnTheWay/AndroidManifest.xml
@@ -7,13 +7,14 @@
     <uses-sdk
         android:minSdkVersion="16"
         android:targetSdkVersion="19" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <!-- bluetooth -->
-         <uses-permission android:name="android.permission.BLUETOOTH"/>  
-        <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />  
-        <uses-permission android:name="android.permission.READ_CONTACTS"/>  
-        <uses-permission android:name="android.permission.CAMERA"/>  
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -22,8 +23,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.demo.androidontheway.MainActivity"
-            android:label="@string/app_name" 
-            android:theme="@android:style/Theme.Light.NoTitleBar">
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,65 +33,76 @@
         </activity>
         <activity
             android:name="com.demo.androidontheway.LaLaPinCheMainActivityDemo"
-            android:label="@string/app_name" 
+            android:label="@string/app_name"
             android:theme="@android:style/Theme.Light.NoTitleBar"
-            android:windowSoftInputMode="adjustUnspecified|stateHidden">
+            android:windowSoftInputMode="adjustUnspecified|stateHidden" >
         </activity>
         <activity
             android:name="com.demo.androidontheway.LaLaPinCheMasterDetails"
-            android:label="@string/app_name" 
-            android:theme="@android:style/Theme.Light.NoTitleBar">
-        </activity>
-        <activity
-            android:name="com.demo.androidontheway.LaLaPinCheTogetherType"
-            android:label="@string/app_name" 
-            android:theme="@android:style/Theme.Light.NoTitleBar">
-        </activity>
-        <activity
-            android:name="com.demo.androidontheway.IndexActivity"
-            android:label="@string/app_name" 
-            android:theme="@android:style/Theme.Light.NoTitleBar">
-        </activity>
-        <activity
-            android:name="com.demo.androidontheway.ActivityPopupWindowTest"
-            android:label="@string/app_name" 
-            android:theme="@android:style/Theme.Light.NoTitleBar">
-        </activity>
-        <activity
-            android:name="com.demo.androidontheway.TestActivity"
-            android:label="@string/app_name" 
-            android:theme="@android:style/Theme.Light.NoTitleBar">
-        </activity>
-        <activity
-            android:name="com.demo.androidontheway.http.WebViewTest"
-            android:label="@string/app_name" 
-            android:theme="@android:style/Theme.Light.NoTitleBar">
-        </activity>
-        <activity
-            android:name="com.demo.androidontheway.http.HttpClient"
-            android:label="@string/app_name" 
-            android:theme="@android:style/Theme.Light.NoTitleBar">
-        </activity>
-        <activity
-            android:name="com.demo.androidontheway.camera.CameraCapture"
-            android:label="@string/app_name" 
-            android:theme="@android:style/Theme.Light.NoTitleBar">
-        </activity>
-        <activity
-            android:name="com.demo.androidontheway.bt.BTOpenCameraActivity"
-            android:label="@string/app_name" 
-            android:theme="@android:style/Theme.Light.NoTitleBar">
-        </activity> 
-        <activity
-            android:name="com.mibound.bluetoothtest.BTChatActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
-        <activity 
-            android:name="com.mibound.bluetoothtest.BTDeviceActivity"
+        <activity
+            android:name="com.demo.androidontheway.LaLaPinCheTogetherType"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Light.NoTitleBar">
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
+        <activity
+            android:name="com.demo.androidontheway.IndexActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.demo.androidontheway.ActivityPopupWindowTest"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.demo.androidontheway.TestActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.demo.androidontheway.http.WebViewTest"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.demo.androidontheway.http.HttpClient"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.demo.androidontheway.camera.CameraCapture"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.demo.androidontheway.bt.BTOpenCameraActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.demo.androidontheway.bt.BTChatActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.demo.androidontheway.bt.BTDeviceActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.demo.androidontheway.broadcast.BroadcastTestActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+
+        <receiver android:name="com.demo.androidontheway.broadcast.BroadcastTestActivity$BootCompleteReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
