--- a/AndroidOnTheWay/AndroidManifest.xml
+++ b/AndroidOnTheWay/AndroidManifest.xml
@@ -103,6 +103,12 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+        
+        <activity
+            android:name="com.demo.androidontheway.customviewproperty.MytestViewActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
     </application>
 
 </manifest>
