--- a/AndroidOnTheWay/AndroidManifest.xml
+++ b/AndroidOnTheWay/AndroidManifest.xml
@@ -15,6 +15,11 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.CAMERA" />
+    
+    <!-- video recording --> 
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
 
     <application
         android:allowBackup="true"
@@ -107,6 +112,12 @@
         <activity
             android:name="com.demo.androidontheway.customviewproperty.MytestViewActivity"
             android:label="@string/app_name"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        
+        <activity
+            android:name="com.demo.androidontheway.camera.VideoRecordingActivity"
+            android:label="@string/app_name" 
             android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
     </application>
